# gnome-outpost

./: .gitmodules  CMakeLists.txt  Makefile
data/: raw-example.txt  raw-test.txt
src/: creature.d  entity.d  ids.d  main.d
src/util/: parser.d
